[ADD] Added mongoose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,20 @@ version: '3'
 
 services:
   leetcode_bot:
+    container_name: leetbot
+    restart: always
     build: .
     volumes:
       - .:/usr/src/app
       - /usr/src/app/node_modules
     ports:
-      - 3000:3000
+      - 8080:8000
       - 9229:9229
+    links:
+      - mongo
     command: npm start
+  mongo:
+    container_name: mongo
+    image: mongo
+    ports:
+      - "27018:27017"
