[UPD] Updated to Babel

--- a/package.json
+++ b/package.json
@@ -1,20 +1,27 @@
 {
   "name": "telegram_bot",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "build": "babel src --out-dir dist",
+    "start": "npm run build && node dist/index.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Adi Sabyrbayev",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.2",
     "cheerio": "^1.0.0-rc.3",
+    "core-js": "^3.6.5",
     "dotenv": "^8.2.0",
     "mongoose": "^5.9.10",
     "telebot": "^1.3.0"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
+    "nodemon": "^2.0.3"
   }
 }
