--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "core-js": "^3.6.5",
     "dotenv": "^8.2.0",
     "mongoose": "^5.9.10",
+    "node-schedule": "^1.3.2",
     "telebot": "^1.3.0"
   },
   "devDependencies": {
