--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "babel src --out-dir dist",
-    "start": "npm run build && node dist/index.js"
+    "start": "npm run build && node dist/index.js",
+    "deploy": "node_modules/@babel/cli/bin/babel.js src/ -d dist/"
   },
   "keywords": [],
   "author": "Adi Sabyrbayev",
@@ -17,9 +18,7 @@
     "dotenv": "^8.2.0",
     "mongoose": "^5.9.10",
     "node-schedule": "^1.3.2",
-    "telebot": "^1.3.0"
-  },
-  "devDependencies": {
+    "telebot": "^1.3.0",
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
