--- a/package.json
+++ b/package.json
@@ -12,16 +12,17 @@
   "author": "Adi Sabyrbayev",
   "license": "ISC",
   "dependencies": {
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
     "axios": "^0.19.2",
     "cheerio": "^1.0.0-rc.3",
     "core-js": "^3.6.5",
     "dotenv": "^8.2.0",
+    "moment": "^2.24.0",
     "mongoose": "^5.9.10",
     "node-schedule": "^1.3.2",
-    "telebot": "^1.3.0",
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.9.6",
-    "@babel/preset-env": "^7.9.6",
-    "nodemon": "^2.0.3"
+    "nodemon": "^2.0.3",
+    "telebot": "^1.3.0"
   }
 }
