[ADD] Added mongo-volume folder to docker volumes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,5 +18,7 @@ services:
   mongo:
     container_name: mongo
     image: mongo
+    volumes:
+      - ./mongo-volume:/data/db
     ports:
       - "27017:27017"
