--- a/babel.config.json
+++ b/babel.config.json
@@ -13,5 +13,14 @@
         "corejs": 3
       }
     ]
+  ],
+  "plugins": [
+    [
+      "babel-plugin-root-import",
+      {
+        "rootPathPrefix": "~",
+        "rootPathSuffix": "src"
+      }
+    ]
   ]
 }
