--- a/package.json
+++ b/package.json
@@ -12,9 +12,6 @@
   "author": "Adi Sabyrbayev",
   "license": "ISC",
   "dependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.9.6",
-    "@babel/preset-env": "^7.9.6",
     "axios": "^0.19.2",
     "cheerio": "^1.0.0-rc.3",
     "core-js": "^3.6.5",
@@ -24,5 +21,21 @@
     "node-schedule": "^1.3.2",
     "nodemon": "^2.0.3",
     "telebot": "^1.3.0"
+  },
+  "devDependencies": {
+    "babel-eslint": "^8.2.6",
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
+    "babel-plugin-root-import": "^5.1.0",
+    "eslint": "~6.8.0",
+    "eslint-config-airbnb-base": "~14.0.0",
+    "eslint-config-eko": "~2.0.0",
+    "eslint-config-prettier": "~6.9.0",
+    "eslint-import-resolver-babel-plugin-root-import": "^1.1.1",
+    "eslint-plugin-import": "~2.20.1",
+    "eslint-plugin-prettier": "~3.1.2",
+    "lint-staged": "^8.1.5",
+    "prettier": "~1.19.1"
   }
 }
