--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "telegram_bot",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
     "build": "babel src --out-dir dist",
+    "prettify": "prettier --write \"**/*.js\" && git add .",
     "start": "npm run build && node dist/index.js",
-    "deploy": "node_modules/@babel/cli/bin/babel.js src --out-dir dist"
+    "deploy": "node_modules/@babel/cli/bin/babel.js src --out-dir dist",
+    "postinstall": "yarn prettify"
   },
   "keywords": [],
   "author": "Adi Sabyrbayev",
@@ -23,19 +25,18 @@
     "telebot": "^1.3.0"
   },
   "devDependencies": {
-    "babel-eslint": "^8.2.6",
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.9.6",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-proposal-decorators": "^7.1.0",
+    "@babel/plugin-transform-runtime": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
-    "babel-plugin-root-import": "^5.1.0",
-    "eslint": "~6.8.0",
-    "eslint-config-airbnb-base": "~14.0.0",
-    "eslint-config-eko": "~2.0.0",
-    "eslint-config-prettier": "~6.9.0",
-    "eslint-import-resolver-babel-plugin-root-import": "^1.1.1",
-    "eslint-plugin-import": "~2.20.1",
-    "eslint-plugin-prettier": "~3.1.2",
-    "lint-staged": "^8.1.5",
-    "prettier": "~1.19.1"
+    "@babel/runtime": "^7.9.6",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.0.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-babel": "^5.3.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "prettier": "^2.0.5"
   }
 }
