--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,7 @@
-# Change token to your own token you get from BotFather
-TOKEN=**************************
+# Change TELEGRAM_TOKEN to your own token you get from BotFather
+TELEGRAM_TELEGRAM=****************************************
+BABEL_ESLINT_PATH=****************************************
+MONGO_URL=localhost
+DB_NAME=leetbot_db
+DB_PORT=27017
+LEETCODE_URL=https://leetcode.com/
