[FIX] Renamed telegram_bot -> leetcode_bot

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "telegram_bot",
-  "version": "1.2.5",
+  "name": "leetcode_bot",
+  "version": "1.2.6",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
