[UPD] Reverted back to Common.js

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Change TELEGRAM_TOKEN to your own token you get from BotFather
-TELEGRAM_TELEGRAM=****************************************
+TELEGRAM_TOKEN=****************************************
 BABEL_ESLINT_PATH=****************************************
 MONGO_URL=localhost
 DB_NAME=leetbot_db
