--- a/package.json
+++ b/package.json
@@ -1,14 +1,10 @@
 {
   "name": "leetcode_bot",
-  "version": "1.2.6",
-  "description": "",
-  "main": "dist/index.js",
+  "version": "1.3.0",
+  "description": "LeetCode BOT for checking rating of users",
+  "main": "src/index.js",
   "scripts": {
-    "build": "babel src --out-dir dist",
-    "prettify": "prettier --write \"**/*.js\" && git add .",
-    "start": "npm run build && node dist/index.js",
-    "deploy": "node_modules/@babel/cli/bin/babel.js src --out-dir dist",
-    "postinstall": "yarn prettify"
+    "start": "node src/index.js"
   },
   "keywords": [],
   "author": "Adi Sabyrbayev",
@@ -16,27 +12,10 @@
   "dependencies": {
     "axios": "^0.19.2",
     "cheerio": "^1.0.0-rc.3",
-    "core-js": "^3.6.5",
     "dotenv": "^8.2.0",
     "moment": "^2.24.0",
     "mongoose": "^5.9.10",
     "node-schedule": "^1.3.2",
-    "nodemon": "^2.0.3",
     "telebot": "^1.3.0"
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.9.6",
-    "@babel/plugin-proposal-class-properties": "^7.1.0",
-    "@babel/plugin-proposal-decorators": "^7.1.0",
-    "@babel/plugin-transform-runtime": "^7.9.6",
-    "@babel/preset-env": "^7.9.6",
-    "@babel/runtime": "^7.9.6",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^7.0.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-prettier": "^3.1.3",
-    "prettier": "^2.0.5"
   }
 }
