--- a/package.json
+++ b/package.json
@@ -17,5 +17,10 @@
     "mongoose": "^5.9.10",
     "node-schedule": "^1.3.2",
     "telebot": "^1.3.0"
+  },
+  "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-import": "^2.20.2"
   }
 }
