--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,7 @@ services:
       - DB_NAME=leetbot_db
       - DB_PORT=27017
       - LEETCODE_URL=https://leetcode.com/
+      - SUBMISSION_COUNT=5
   mongo:
     container_name: mongo
     image: mongo
