[ADD] Master password for secure actions

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # Change TELEGRAM_TOKEN to your own token you get from BotFather
 TELEGRAM_TOKEN=****************************************
+MASTER_PASSWORD=***************************************
 MONGO_URL=localhost
 DB_NAME=leetbot_db
 DB_PORT=27017
