[FIX] Issue with URL

--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,5 @@ MASTER_PASSWORD=***************************************
 MONGO_URL=localhost
 DB_NAME=leetbot_db
 DB_PORT=27017
-LEETCODE_URL=https://leetcode.com/
+LEETCODE_URL=https://leetcode.com
 SUBMISSION_COUNT=5
