--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "moment": "^2.24.0",
     "mongoose": "^5.9.10",
     "node-schedule": "^1.3.2",
-    "telebot": "^1.3.0"
+    "node-telegram-bot-api": "^0.50.0"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
