ADD Discord BOT

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,11 @@
 # Change TELEGRAM_TOKEN to your own token you get from BotFather
+TELEGRAM_ENABLE=True
 TELEGRAM_TOKEN=****************************************
+
+# Change DISCORD_TOKEN to your own token you get from https://discord.com/developers/applications/
+DISCORD_ENABLE=False
+DISCORD_TOKEN=*****************************************
+
 MASTER_PASSWORD=***************************************
 MONGO_URL=localhost
 DB_NAME=leetbot_db
