--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "cheerio": "^1.0.0-rc.3",
+    "discord.js": "^12.3.1",
     "dotenv": "^8.2.0",
     "moment": "^2.24.0",
     "mongoose": "^5.9.10",
