--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,8 @@ DISCORD_TOKEN=*****************************************
 MASTER_PASSWORD=***************************************
 MONGO_URL=localhost
 DB_NAME=leetbot_db
+DB_USER=admin
+DB_PASSWORD=password
 DB_PORT=27017
 LEETCODE_URL=https://leetcode.com
 SUBMISSION_COUNT=5
