--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,3 +21,8 @@ services:
       - ./mongo-volume:/data/db
     ports:
       - "27017:27017"
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME="admin"
+      - MONGO_INITDB_ROOT_PASSWORD="password"
+      - MONGO_INITDB_DATABASE="leetbot_db"
+      - MONGODB_DATA_DIR="/data/db"
