ADD .env variable to show if database authentication is enabled

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,7 @@ DISCORD_TOKEN=*****************************************
 MASTER_PASSWORD=***************************************
 MONGO_URL=localhost
 DB_NAME=leetbot_db
+DB_AUTHENTICATION_ENABLED=true
 DB_USER=admin
 DB_PASSWORD=password
 DB_PORT=27017
