FIX name of BotFather in .env

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# Change TELEGRAM_TOKEN to your own token you get from BotFather
+# Change TELEGRAM_TOKEN to your own token you get from https://t.me/botfather
 TELEGRAM_ENABLE=True
 TELEGRAM_TOKEN=****************************************
 
