--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   leetcode_bot:
     container_name: leetbot
     restart: always
-    build: docker/.
+    build: .
     volumes:
       - .:/usr/src/app
       - /usr/src/app/node_modules
