UPD added functionality to use multiple databases

--- a/.env.example
+++ b/.env.example
@@ -6,13 +6,17 @@ TELEGRAM_TOKEN=****************************************
 DISCORD_ENABLE=False
 DISCORD_TOKEN=*****************************************
 
-MASTER_PASSWORD=***************************************
-MONGO_URL=localhost
+# Database settings
+DB_PROVIDER=mongo
+DB_URL=localhost
 DB_NAME=leetbot_db
-DB_AUTHENTICATION_ENABLED=true
+DB_AUTHENTICATION_ENABLED=True
 DB_USER=admin
 DB_PASSWORD=password
 DB_PORT=27017
+
+# System settings
 LEETCODE_URL=https://leetcode.com
 SUBMISSION_COUNT=5
 DELAY_TIME_MS=4000
+MASTER_PASSWORD=***************************************
