FIX scheduler time is now .env variable

--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,13 @@ LEETCODE_URL=https://leetcode.com
 SUBMISSION_COUNT=5
 DELAY_TIME_MS=4000
 MASTER_PASSWORD=***************************************
+#   *    *    *    *    *    *
+#   ┬    ┬    ┬    ┬    ┬    ┬
+#   │    │    │    │    │    │
+#   │    │    │    │    │    └ day of week (0 - 7) (0 or 7 is Sun)
+#   │    │    │    │    └───── month (1 - 12)
+#   │    │    │    └────────── day of month (1 - 31)
+#   │    │    └─────────────── hour (0 - 23)
+#   │    └──────────────────── minute (0 - 59)
+#   └───────────────────────── second (0 - 59, OPTIONAL)
+NODE_SCHEDULE_TIME="*/30 * * * *"
