ADD functionality to use postgres database

--- a/.env.example
+++ b/.env.example
@@ -7,13 +7,23 @@ DISCORD_ENABLE=False
 DISCORD_TOKEN=*****************************************
 
 # Database settings
+# Can be mongo or postgres
 DB_PROVIDER=mongo
+
+# Database settings
 DB_URL=localhost
 DB_NAME=leetbot_db
 DB_AUTHENTICATION_ENABLED=True
 DB_USER=admin
 DB_PASSWORD=password
 DB_PORT=27017
+
+# POSTGRES SETTINGS
+POSTGRES_DB_URL=localhost
+POSTGRES_DB_NAME=leetbot_db
+POSTGRES_DB_USER=admin
+POSTGRES_DB_PASSWORD=password
+POSTGRES_DB_PORT=5432
 
 # System settings
 LEETCODE_URL=https://leetcode.com
