--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "moment": "^2.24.0",
     "mongoose": "^5.10.7",
     "node-schedule": "^1.3.2",
-    "node-telegram-bot-api": "^0.50.0"
+    "node-telegram-bot-api": "^0.50.0",
+    "pg": "^8.4.1"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
