--- a/.env.example
+++ b/.env.example
@@ -11,12 +11,12 @@ DISCORD_TOKEN=*****************************************
 DB_PROVIDER=mongo
 
 # Database settings
-DB_URL=localhost
-DB_NAME=leetbot_db
-DB_AUTHENTICATION_ENABLED=True
-DB_USER=admin
-DB_PASSWORD=password
-DB_PORT=27017
+MONGO_DB_URL=localhost
+MONGO_DB_NAME=leetbot_db
+MONGO_DB_AUTHENTICATION_ENABLED=True
+MONGO_DB_USER=admin
+MONGO_DB_PASSWORD=password
+MONGO_DB_PORT=27017
 
 # POSTGRES SETTINGS
 POSTGRES_DB_URL=localhost
