--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "axios": "^0.19.2",
     "discord.js": "^12.3.1",
     "dotenv": "^8.2.0",
+    "imgur": "^0.3.1",
     "moment": "^2.24.0",
     "mongoose": "^5.10.7",
+    "node-html-to-image": "^3.1.0",
     "node-schedule": "^1.3.2",
     "node-telegram-bot-api": "^0.50.0",
-    "pg": "^8.4.1"
+    "pg": "^8.4.1",
+    "uuid4": "^2.0.2"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
