--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "imgur": "^0.3.1",
     "moment": "^2.24.0",
     "mongoose": "^5.10.7",
-    "node-html-to-image": "^3.1.0",
     "node-schedule": "^1.3.2",
     "node-telegram-bot-api": "^0.50.0",
     "pg": "^8.4.1",
+    "puppeteer": "^5.4.0",
     "uuid4": "^2.0.2"
   },
   "devDependencies": {
