--- a/.env.example
+++ b/.env.example
@@ -40,3 +40,6 @@ MASTER_PASSWORD=***************************************
 #   │    └──────────────────── minute (0 - 59)
 #   └───────────────────────── second (0 - 59, OPTIONAL)
 NODE_SCHEDULE_TIME="*/30 * * * *"
+
+# Server settings (Only used on the server)
+CHROMIUM_PATH=""
