FIX docker files

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,7 @@
 version: '3'
 
 services:
-  leetcode_bot:
-    container_name: leetbot
+  backend:
     restart: always
     build: .
     volumes:
