UPD change table generation

--- a/.env.example
+++ b/.env.example
@@ -25,6 +25,9 @@ POSTGRES_DB_USER=admin
 POSTGRES_DB_PASSWORD=password
 POSTGRES_DB_PORT=5432
 
+# Table API
+TABLE_API_LINK="https://table-api.adigame.dev/convert/"
+
 # System settings
 LEETCODE_URL=https://leetcode.com
 SUBMISSION_COUNT=5
