ADD User limit to environment

--- a/.env.example
+++ b/.env.example
@@ -32,6 +32,7 @@ TABLE_API_LINK="https://table-api.adigame.dev/convert/"
 LEETCODE_URL=https://leetcode.com
 SUBMISSION_COUNT=5
 DELAY_TIME_MS=4000
+USER_AMOUNT_LIMIT=30
 MASTER_PASSWORD=***************************************
 #   *    *    *    *    *    *
 #   ┬    ┬    ┬    ┬    ┬    ┬
