UPD add sqlite3 as default database

--- a/.env.example
+++ b/.env.example
@@ -7,8 +7,8 @@ DISCORD_ENABLE=False
 DISCORD_TOKEN=*****************************************
 
 # Database settings
-# Can be mongo or postgres
-DB_PROVIDER=mongo
+# Can be sqlite3, mongo or postgres
+DB_PROVIDER=sqlite3
 
 # Database settings
 MONGO_DB_URL=localhost
