--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.2",
+    "better-sqlite3": "^7.1.1",
     "discord.js": "^12.3.1",
     "dotenv": "^8.2.0",
     "moment": "^2.24.0",
