--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.2",
-    "better-sqlite3": "^7.1.1",
     "discord.js": "^12.3.1",
     "dotenv": "^8.2.0",
     "moment": "^2.24.0",
@@ -20,6 +19,8 @@
     "node-schedule": "^1.3.2",
     "node-telegram-bot-api": "^0.50.0",
     "pg": "^8.4.1",
+    "sqlite": "^4.0.17",
+    "sqlite3": "^5.0.0",
     "uuid4": "^2.0.2"
   },
   "devDependencies": {
