FIX .env comment for mongodb settings

--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,7 @@ DISCORD_TOKEN=*****************************************
 # Can be sqlite3, mongo or postgres
 DB_PROVIDER=sqlite3
 
-# Database settings
+# MONGODB SETTINGS
 MONGO_DB_URL=localhost
 MONGO_DB_NAME=leetbot_db
 MONGO_DB_AUTHENTICATION_ENABLED=True
