--- a/.env.example
+++ b/.env.example
@@ -25,8 +25,8 @@ POSTGRES_DB_USER=admin
 POSTGRES_DB_PASSWORD=password
 POSTGRES_DB_PORT=5432
 
-# Table API
-TABLE_API_LINK="https://table-api.adigame.dev/convert/"
+# External Microservices
+VIZAPI_LINK="https://table-api.adigame.dev/convert/"
 
 # System settings
 LEETCODE_URL=https://leetcode.com
