--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
-    "fix": "eslint --fix src/*"
+    "fix": "eslint --fix src/*",
+    "test": "jest"
   },
   "keywords": [],
   "author": "Adi Sabyrbayev",
