--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node --experimental-modules --experimental-specifier-resolution=node src/index.js",
     "fix": "eslint --fix src/*",
-    "test": "jest"
+    "test": "NODE_OPTIONS='--experimental-vm-modules' jest"
   },
   "keywords": [],
   "author": "Adi Sabyrbayev",
@@ -26,6 +26,7 @@
     "uuid4": "^2.0.2"
   },
   "devDependencies": {
+    "@jest/globals": "^26.6.2",
     "eslint": "^7.18.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
