--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.21.1",
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
+    "lodash": "^4.17.20",
     "moment": "^2.29.1",
     "mongoose": "^5.11.14",
     "node-schedule": "^1.3.3",
