ADD testing constants for Discord

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,8 @@ TELEGRAM_TOKEN=****************************************
 # Change DISCORD_TOKEN to your own token you get from https://discord.com/developers/applications/
 DISCORD_ENABLE=False
 DISCORD_TOKEN=*****************************************
+DISCORD_TEST_ENABLE=False
+DISCORD_TEST_TOKEN=************************************
 
 # Database settings
 # Can be sqlite3, mongo or postgres
