--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "start": "node --experimental-modules --experimental-specifier-resolution=node src/index.js",
     "fix": "eslint --fix src/*",
-    "test": "NODE_OPTIONS='--experimental-vm-modules' jest",
-    "test:leaks": "NODE_OPTIONS='--experimental-vm-modules' jest --runInBand --detectOpenHandles "
+    "test": "NODE_OPTIONS='--experimental-vm-modules' jest"
   },
   "keywords": [],
   "author": "Adi Sabyrbayev",
