ADD test for telegram

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 # Change TELEGRAM_TOKEN to your own token you get from https://t.me/botfather
 TELEGRAM_ENABLE=True
 TELEGRAM_TOKEN=****************************************
+TELEGRAM_TEST_ENABLE=False
+TELEGRAM_TEST_TOKEN=***********************************
 
 # Change DISCORD_TOKEN to your own token you get from https://discord.com/developers/applications/
 DISCORD_ENABLE=False
