FIX name of the VIZAPI_LINK in .env

--- a/.env.example
+++ b/.env.example
@@ -30,7 +30,7 @@ POSTGRES_DB_PASSWORD=password
 POSTGRES_DB_PORT=5432
 
 # External Microservices
-VIZAPI_LINK="https://table-api.adigame.dev/convert/"
+VIZAPI_LINK=https://vizapi.example.com
 
 # System settings
 LEETCODE_URL=https://leetcode.com
