--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "awesome-typescript-loader": "^5.2.1",
     "axios": "^0.21.1",
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
@@ -23,6 +24,7 @@
     "node-schedule": "^1.3.3",
     "node-telegram-bot-api": "^0.51.0",
     "pg": "^8.5.1",
+    "source-map-loader": "^2.0.1",
     "sqlite": "^4.0.19",
     "sqlite3": "^5.0.0",
     "uuid4": "^2.0.2"
