--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,8 +4,15 @@
         "node": true,
         "jest": true
     },
+    "root": true,
+    "parser": "@typescript-eslint/parser",
     "extends": [
-        "airbnb-base"
+        "airbnb-base",
+        "plugin:@typescript-eslint/eslint-recommended",
+        "plugin:@typescript-eslint/recommended"
+    ],
+    "plugins": [
+        "@typescript-eslint"
     ],
     "globals": {
         "Atomics": "readonly",
@@ -18,6 +25,23 @@
         "no-plusplus": ["error", { "allowForLoopAfterthoughts": true }],
         "no-console": 2,
         "import/order": ["error", {"newlines-between": "always"}],
-        "max-len": ["error", { "code": 80, "ignoreTemplateLiterals": true }]
+        "max-len": ["error", { "code": 80, "ignoreTemplateLiterals": true }],
+        "import/extensions": [
+            "error",
+            "ignorePackages",
+            {
+              "js": "never",
+              "jsx": "never",
+              "ts": "never",
+              "tsx": "never"
+            }
+         ]
+    },
+    "settings": {
+        "import/resolver": {
+            "node": {
+                "extensions": [".js", ".jsx", ".ts", ".tsx"]
+            }
+        }
     }
 }
