--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,9 @@
     "compilerOptions": {
         "outDir": "./dist",
         "allowJs": true,
-        "target": "es5"
+        "target": "es5",
+        "module": "CommonJS",
+        "sourceMap": true
     },
     "include": ["./src/**/*"]
 }
