--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "tsc && node dist/index.js",
     "fix": "eslint --fix src/*",
     "test": "NODE_OPTIONS='--experimental-vm-modules' jest",
-    "test:coverage": "NODE_OPTIONS='--experimental-vm-modules' jest --coverage"
+    "test:coverage": "NODE_OPTIONS='--experimental-vm-modules' jest --coverage",
+    "lint": "eslint ./src --ext .js,.ts"
   },
   "keywords": [],
   "author": "Adi Sabyrbayev",
@@ -35,6 +36,7 @@
     "eslint": "^7.18.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
-    "jest": "^26.6.3"
+    "jest": "^26.6.3",
+    "typescript": "^4.2.4"
   }
 }
