--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,6 @@
         "sourceMap": true,
         "types": ["node", "jest"]
     },
-    "include": ["./src/**/*"]
+    "include": ["./src/**/*"],
+    "exclude": ["./src/__tests__"]
 }
