--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "leetcode_bot",
   "version": "1.3.2",
   "description": "LeetCode BOT for checking rating of users",
-  "main": "src/index.js",
   "scripts": {
     "build": "rimraf dist && tsc",
     "start": "npm run build && node dist/index.js",
@@ -16,25 +15,23 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
+    "dayjs": "^1.10.4",
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
     "lodash": "^4.17.20",
-    "moment": "^2.29.1",
     "mongoose": "^5.11.14",
     "node-schedule": "^1.3.3",
     "node-telegram-bot-api": "^0.51.0",
     "pg": "^8.5.1",
     "sqlite": "^4.0.19",
-    "sqlite3": "^5.0.0",
-    "uuid4": "^2.0.2"
+    "sqlite3": "^5.0.0"
   },
   "devDependencies": {
     "@jest/globals": "^26.6.2",
-    "@types/babel__core": "^7.1.14",
     "@types/jest": "^26.0.22",
     "@types/lodash": "^4.14.168",
-    "@typescript-eslint/eslint-plugin": "^4.21.0",
-    "@typescript-eslint/parser": "^4.21.0",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
     "eslint": "^7.18.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
