--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "node-telegram-bot-api": "^0.51.0",
     "pg": "^8.5.1",
     "sqlite": "^4.0.19",
-    "sqlite3": "^5.0.0"
+    "sqlite3": "^5.0.0",
+    "rimraf": "^3.0.2",
+    "typescript": "^4.2.4",
+    "jest": "^26.6.3"
   },
   "devDependencies": {
     "@jest/globals": "^26.6.2",
@@ -35,9 +38,6 @@
     "eslint": "^7.18.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
-    "jest": "^26.6.3",
-    "rimraf": "^3.0.2",
-    "ts-jest": "^26.5.4",
-    "typescript": "^4.2.4"
+    "ts-jest": "^26.5.4"
   }
 }
