ADD slack settings to .env

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,12 @@ DISCORD_TOKEN=*****************************************
 DISCORD_TEST_ENABLE=False
 DISCORD_TEST_TOKEN=************************************
 
+# Change SLACK_TOKEN to your own token
+SLACK_ENABLE=False
+SLACK_TOKEN=*****************************************
+SLACK_TEST_ENABLE=False
+SLACK_TEST_TOKEN=************************************
+
 # Database settings
 # Can be sqlite3, mongo or postgres
 DB_PROVIDER=sqlite3
