--- a/package.json
+++ b/package.json
@@ -18,16 +18,17 @@
     "dayjs": "^1.10.4",
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
+    "jest": "^26.6.3",
     "lodash": "^4.17.20",
     "mongoose": "^5.11.14",
     "node-schedule": "^1.3.3",
     "node-telegram-bot-api": "^0.51.0",
     "pg": "^8.5.1",
+    "rimraf": "^3.0.2",
+    "slackbots": "^1.2.0",
     "sqlite": "^4.0.19",
     "sqlite3": "^5.0.0",
-    "rimraf": "^3.0.2",
-    "typescript": "^4.2.4",
-    "jest": "^26.6.3"
+    "typescript": "^4.2.4"
   },
   "devDependencies": {
     "@jest/globals": "^26.6.2",
