--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,7 @@ DISCORD_TOKEN=*****************************************
 DISCORD_TEST_ENABLE=False
 DISCORD_TEST_TOKEN=************************************
 
-# Change SLACK_TOKEN to your own token
+# Change SLACK_TOKEN to your own token you get from https://api.slack.com/apps
 SLACK_ENABLE=False
 SLACK_TOKEN=*****************************************
 SLACK_TEST_ENABLE=False
