--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Adi Sabyrbayev",
   "license": "ISC",
   "dependencies": {
+    "@slack/bolt": "^3.4.0",
     "axios": "^0.21.1",
     "dayjs": "^1.10.4",
     "discord.js": "^12.5.1",
@@ -25,7 +26,6 @@
     "node-telegram-bot-api": "^0.51.0",
     "pg": "^8.5.1",
     "rimraf": "^3.0.2",
-    "slackbots": "^1.2.0",
     "sqlite": "^4.0.19",
     "sqlite3": "^5.0.0",
     "typescript": "^4.2.4"
