ADD more slack constants

--- a/.env.example
+++ b/.env.example
@@ -12,9 +12,11 @@ DISCORD_TEST_TOKEN=************************************
 
 # Change SLACK_TOKEN to your own token you get from https://api.slack.com/apps
 SLACK_ENABLE=False
-SLACK_TOKEN=*****************************************
+SLACK_TOKEN=*******************************************
+SLACK_SIGNING_SECRET=**********************************
 SLACK_TEST_ENABLE=False
-SLACK_TEST_TOKEN=************************************
+SLACK_TEST_TOKEN=**************************************
+SLACK_TEST_SIGNING_SECRET=*****************************
 
 # Database settings
 # Can be sqlite3, mongo or postgres
