ADD app_token to .env

--- a/.env.example
+++ b/.env.example
@@ -14,9 +14,11 @@ DISCORD_TEST_TOKEN=************************************
 SLACK_ENABLE=False
 SLACK_TOKEN=*******************************************
 SLACK_SIGNING_SECRET=**********************************
+SLACK_APP_TOKEN=***************************************
 SLACK_TEST_ENABLE=False
 SLACK_TEST_TOKEN=**************************************
 SLACK_TEST_SIGNING_SECRET=*****************************
+SLACK_TEST_APP_TOKEN=**********************************
 
 # Database settings
 # Can be sqlite3, mongo or postgres
