--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -17,7 +17,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [ v12, v14, v16 ]
+        node-version: [ v16 ]
 
     steps:
     - uses: actions/checkout@v2
