Update npm test to be force exitable on leaks

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "build": "rimraf dist && tsc",
     "start": "npm run build && node dist/index.js",
     "fix": "eslint --fix src/*",
-    "test": "jest",
-    "test:leaks": "jest --runInBand --detectOpenHandles",
+    "test": "jest --forceExit",
+    "test:leaks": "jest --runInBand --watch --detectOpenHandles",
     "test:coverage": "NODE_OPTIONS='--experimental-vm-modules' jest --coverage",
     "lint": "eslint ./src --ext .js,.ts"
   },
