--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,11 +28,12 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-      env:
-        DISCORD_TEST_ENABLE: ${{ secrets.DISCORD_TEST_ENABLE }}
-        DISCORD_TEST_TOKEN: ${{ secrets.DISCORD_TEST_TOKEN }} 
-        TELEGRAM_TEST_ENABLE: ${{ secrets.TELEGRAM_TEST_ENABLE }}
-        TELEGRAM_TEST_TOKEN: ${{ secrets.TELEGRAM_TEST_TOKEN }} 
+    - run: |
+      touch .env
+      echo DISCORD_TEST_ENABLE=${{ secrets.DISCORD_TEST_ENABLE }} >> .env
+      echo DISCORD_TEST_TOKEN=${{ secrets.DISCORD_TEST_TOKEN }} >> .env
+      echo TELEGRAM_TEST_ENABLE=${{ secrets.TELEGRAM_TEST_ENABLE }} >> .env
+      echo TELEGRAM_TEST_TOKEN=${{ secrets.TELEGRAM_TEST_TOKEN }} >> .env
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
