--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   docker:
     name: Test
-    
+
     timeout-minutes: 10
     runs-on: ubuntu-latest
 
@@ -20,16 +20,11 @@ jobs:
     - name: Start container
       run: docker-compose -f "docker-compose.yml" up -d --build
 
-    - name: Install node
-      uses: actions/setup-node@v1
-      with:
-        node-version: 14.15.4
-
-    - name: Install dependencies
-      run: npm ci
+    - name: Install Testing dependencies
+      run: docker-compose run npm ci
 
     - name: Run tests
-      run: npm test
+      run: docker-compose run npm test
 
     - name: Stop containers
       if: always()
