--- a/deployment/Dockerfile.test
+++ b/deployment/Dockerfile.test
@@ -1,8 +1,9 @@
-FROM node:15.13-alpine3.10
+FROM leetcode_bot
 
-WORKDIR /usr/src/app
+# Override the NODE_ENV environment variable to 'dev', in order to get required test packages
+ENV NODE_ENV dev
 
-COPY . .
-RUN npm ci
+# Install test packages
+RUN npm update
 
 CMD ["npm", "test"]
