--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -1,8 +1,10 @@
 name: CI
 
 on:
+  push:
+    branches: [ master ]
   pull_request:
-    types: [ labeled ]
+    branches: [ master ]
 
 jobs:
   build:
