--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@slack/bolt": "^3.5.0",
     "axios": "^0.21.1",
+    "consul": "^0.40.0",
     "dayjs": "^1.10.6",
     "discord.js": "^12.5.1",
     "dotenv": "^8.6.0",
