--- a/.env.example
+++ b/.env.example
@@ -41,6 +41,7 @@ POSTGRES_DB_PORT=5432
 
 # External Microservices
 VIZAPI_LINK=https://vizapi.example.com
+COVERALLS_TOKEN=**********************
 
 # System settings
 LEETCODE_URL=https://leetcode.com
