--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test:debug": "jest --watch",
     "test:leaks": "jest --runInBand --detectOpenHandles",
     "test:coverage": "jest --coverage",
-    "coveralls": "jest --coverage && cat ./coverage/lcov.info | coveralls",
+    "test:coveralls": "jest --coverage && cat ./coverage/lcov.info | coveralls",
     "lint": "eslint ./src --ext .js,.ts"
   },
   "keywords": [],
