--- a/.env.example
+++ b/.env.example
@@ -1,24 +1,18 @@
 # Change TELEGRAM_TOKEN to your own token you get from https://t.me/botfather
-TELEGRAM_ENABLE=True
-TELEGRAM_TOKEN=****************************************
-TELEGRAM_TEST_ENABLE=False
-TELEGRAM_TEST_TOKEN=***********************************
+TELEGRAM_TOKEN=
+TELEGRAM_TEST_TOKEN=
 
 # Change DISCORD_TOKEN to your own token you get from https://discord.com/developers/applications/
-DISCORD_ENABLE=False
-DISCORD_TOKEN=*****************************************
-DISCORD_TEST_ENABLE=False
-DISCORD_TEST_TOKEN=************************************
+DISCORD_TOKEN=
+DISCORD_TEST_TOKEN=
 
 # Change SLACK_TOKEN to your own token you get from https://api.slack.com/apps
-SLACK_ENABLE=False
-SLACK_TOKEN=*******************************************
-SLACK_SIGNING_SECRET=**********************************
-SLACK_APP_TOKEN=***************************************
-SLACK_TEST_ENABLE=False
-SLACK_TEST_TOKEN=**************************************
-SLACK_TEST_SIGNING_SECRET=*****************************
-SLACK_TEST_APP_TOKEN=**********************************
+SLACK_TOKEN=
+SLACK_SIGNING_SECRET=
+SLACK_APP_TOKEN=
+SLACK_TEST_TOKEN=
+SLACK_TEST_SIGNING_SECRET=
+SLACK_TEST_APP_TOKEN=
 
 # Database settings
 # Can be sqlite3, mongo or postgres
