Unhardcode cml points

--- a/.env.example
+++ b/.env.example
@@ -37,6 +37,11 @@ POSTGRES_DB_PORT=5432
 VIZAPI_LINK=https://vizapi.example.com
 COVERALLS_TOKEN=**********************
 
+# Cumulative Rating Settings
+CML_EASY_POINTS=0.5
+CML_MEDIUM_POINTS=1.5
+CML_HARD_POINTS=5
+
 # System settings
 LEETCODE_URL=https://leetcode.com
 DELAY_TIME_MS=4000
