Rename DELAY_TIME_MS -> USER_REQUEST_DELAY_MS

--- a/.env.example
+++ b/.env.example
@@ -44,7 +44,7 @@ CML_HARD_POINTS=5
 
 # System settings
 LEETCODE_URL=https://leetcode.com
-DELAY_TIME_MS=4000
+USER_REQUEST_DELAY_MS=4000
 USER_AMOUNT_LIMIT=30
 MASTER_PASSWORD=***************************************
 #   *    *    *    *    *    *
@@ -56,4 +56,4 @@ MASTER_PASSWORD=***************************************
 #   │    │    └─────────────── hour (0 - 23)
 #   │    └──────────────────── minute (0 - 59)
 #   └───────────────────────── second (0 - 59, OPTIONAL)
-NODE_SCHEDULE_TIME="*/30 * * * *"
+DB_REFRESH_DELAY="*/30 * * * *"
