Rename NODE_SCHEDULE_TIME -> USERS_REFRESH_DELAY

--- a/.env.example
+++ b/.env.example
@@ -56,4 +56,4 @@ MASTER_PASSWORD=***************************************
 #   │    │    └─────────────── hour (0 - 23)
 #   │    └──────────────────── minute (0 - 59)
 #   └───────────────────────── second (0 - 59, OPTIONAL)
-DB_REFRESH_DELAY="*/30 * * * *"
+USERS_REFRESH_DELAY="*/30 * * * *"
