Change value of default MASTER_PASSWORD

--- a/.env.example
+++ b/.env.example
@@ -46,7 +46,7 @@ CML_HARD_POINTS=5
 LEETCODE_URL=https://leetcode.com
 USER_REQUEST_DELAY_MS=4000
 USER_AMOUNT_LIMIT=30
-MASTER_PASSWORD=***************************************
+MASTER_PASSWORD=admin
 #   *    *    *    *    *    *
 #   ┬    ┬    ┬    ┬    ┬    ┬
 #   │    │    │    │    │    │
