--- a/package.json
+++ b/package.json
@@ -17,32 +17,33 @@
   "author": "Adi Sabyrbayev",
   "license": "ISC",
   "dependencies": {
-    "@slack/bolt": "^3.6.0",
-    "axios": "^0.21.4",
+    "@slack/bolt": "^3.7.0",
+    "axios": "^0.22.0",
     "dayjs": "^1.10.7",
-    "discord.js": "^12.5.1",
-    "dotenv": "^8.6.0",
-    "jest": "^26.6.3",
-    "lodash": "^4.17.20",
-    "mongoose": "^5.13.9",
-    "node-schedule": "^1.3.3",
-    "node-telegram-bot-api": "^0.51.0",
-    "pg": "^8.6.0",
+    "discord.js": "^13.1.0",
+    "dotenv": "^10.0.0",
+    "jest": "^27.2.4",
+    "lodash": "^4.17.21",
+    "mongoose": "^6.0.8",
+    "node-schedule": "^2.0.0",
+    "node-telegram-bot-api": "^0.54.0",
+    "pg": "^8.7.1",
     "rimraf": "^3.0.2",
     "sqlite": "^4.0.23",
     "sqlite3": "^5.0.2",
     "typescript": "^4.4.3"
   },
   "devDependencies": {
-    "@jest/globals": "^26.6.2",
-    "@types/jest": "^26.0.24",
-    "@types/lodash": "^4.14.173",
-    "@typescript-eslint/eslint-plugin": "^4.31.2",
-    "@typescript-eslint/parser": "^4.31.2",
+    "@jest/globals": "^27.2.4",
+    "@types/jest": "^27.0.2",
+    "@types/lodash": "^4.14.175",
+    "@types/node": "^16.10.2",
+    "@typescript-eslint/eslint-plugin": "^4.32.0",
+    "@typescript-eslint/parser": "^4.32.0",
     "coveralls": "^3.1.1",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.24.2",
-    "ts-jest": "^26.5.6"
+    "ts-jest": "^27.0.5"
   }
 }
