--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "@slack/bolt": "^3.7.0",
-    "axios": "^0.22.0",
+    "axios": "0.21.1",
     "dayjs": "^1.10.7",
     "discord.js": "^13.1.0",
     "dotenv": "^10.0.0",
