ADD networking for LeetCode BOT

--- a/.env.example
+++ b/.env.example
@@ -57,3 +57,6 @@ MASTER_PASSWORD=admin
 #   │    └──────────────────── minute (0 - 59)
 #   └───────────────────────── second (0 - 59, OPTIONAL)
 USERS_REFRESH_DELAY="*/30 * * * *"
+
+# Docker settings
+DATABASE_NETWORK=database_network
