--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,3 +14,10 @@ services:
       - 8080:8000
       - 9229:9229
     command: npm start
+    networks:
+      - database_network
+
+networks:
+  database_network:
+    external:
+      name: ${DATABASE_NETWORK}
