--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -17,7 +17,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [ v14.15.4 ]
+        node-version: [ v15.13 ]
 
     environment: testing_environment
 
@@ -34,6 +34,7 @@ jobs:
         && echo DISCORD_TEST_TOKEN=${{ secrets.DISCORD_TEST_TOKEN }} >> .env
         && echo TELEGRAM_TEST_TOKEN=${{ secrets.TELEGRAM_TEST_TOKEN }} >> .env
         && echo VIZAPI_LINK=${{ secrets.VIZAPI_LINK }} >> .env
+        && echo CODECOV_TOKEN=${{ secrets.CODECOV_TOKEN }} >> .env
     - run: npm ci
     - run: npm run build --if-present
     - run: npm run test:coveralls
@@ -54,7 +55,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [ v14.15.4 ]
+        node-version: [ v15.13 ]
 
     environment: testing_environment
 
@@ -71,6 +72,40 @@ jobs:
         && echo DISCORD_TEST_TOKEN=${{ secrets.DISCORD_TEST_TOKEN }} >> .env
         && echo TELEGRAM_TEST_TOKEN=${{ secrets.TELEGRAM_TEST_TOKEN }} >> .env
         && echo VIZAPI_LINK=${{ secrets.VIZAPI_LINK }} >> .env
+        && echo CODECOV_TOKEN=${{ secrets.CODECOV_TOKEN }} >> .env
     - run: npm ci
     - run: npm run build --if-present
     - run: npm run test:coverage
+
+  codecov:
+    name: Code Coverage Report
+
+    runs-on: ubuntu-latest
+
+    env:
+      CI: true
+
+    strategy:
+      matrix:
+        node-version: [ v15.13 ]
+
+    environment: testing_environment
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v2
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'npm'
+    - name: create .env file and add secrets
+      run: >
+        touch .env
+        && echo DISCORD_TEST_TOKEN=${{ secrets.DISCORD_TEST_TOKEN }} >> .env
+        && echo TELEGRAM_TEST_TOKEN=${{ secrets.TELEGRAM_TEST_TOKEN }} >> .env
+        && echo VIZAPI_LINK=${{ secrets.VIZAPI_LINK }} >> .env
+        && echo CODECOV_TOKEN=${{ secrets.CODECOV_TOKEN }} >> .env
+    - run: npm ci
+    - run: npm run build --if-present
+    - run: nyc report --reporter=json > coverage/coverage.json
+
