ADD creation of coverage folder

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -108,6 +108,6 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
     - name: create coverage file
-      run: touch coverage/coverage.json
+      run: mkdir coverage && touch coverage/coverage.json
     - run: nyc report --reporter=json > coverage/coverage.json
 
