--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "outDir": "./dist",
         "allowJs": true,
-        "target": "es5",
+        "target": "ES2017",
         "module": "CommonJS",
         "sourceMap": true,
         "types": ["node", "jest"],
