Add APP_ID and GUILD_ID to discord constants

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,8 @@ TELEGRAM_TEST_TOKEN=
 # Change DISCORD_TOKEN to your own token you get from https://discord.com/developers/applications/
 DISCORD_TOKEN=
 DISCORD_TEST_TOKEN=
+DISCORD_APP_ID=
+DISCORD_GUILD_ID=
 
 # Change SLACK_TOKEN to your own token you get from https://api.slack.com/apps
 SLACK_TOKEN=
