--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,6 +29,7 @@
             }
         ],
         "no-console": 2,
+        "no-continue": 0,
         "import/order": [
             "error",
             {
