ADD eslint for disabling no-lonely-if

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,6 +30,7 @@
         ],
         "no-console": 2,
         "no-continue": 0,
+        "no-lonely-if": 0,
         "import/order": [
             "error",
             {
