--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,6 +31,7 @@
         "no-console": 2,
         "no-continue": 0,
         "no-lonely-if": 0,
+        "no-underscore-dangle": 0,
         "import/order": [
             "error",
             {
