--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,7 @@
         "no-continue": 0,
         "no-lonely-if": 0,
         "no-underscore-dangle": 0,
+        "max-classes-per-file": 0,
         "import/order": [
             "error",
             {
