--- a/package.json
+++ b/package.json
@@ -50,5 +50,10 @@
     "mongodb-memory-server": "^8.1.0",
     "telegram-test": "^0.1.8",
     "ts-jest": "^27.0.5"
+  },
+  "config": {
+    "mongodbMemoryServer": {
+      "version": "latest"
+    }
   }
 }
