Small fixes to .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,12 @@
-# Change TELEGRAM_TOKEN to your own token you get from https://t.me/botfather
+# Get token from https://t.me/botfather
 TELEGRAM_TOKEN=
 
-# Change DISCORD_TOKEN to your own token you get from https://discord.com/developers/applications
+# Get values from https://discord.com/developers/applications
 DISCORD_TOKEN=
 DISCORD_APP_ID=
 DISCORD_GUILD_ID=
 
-# Change SLACK_TOKEN to your own token you get from https://api.slack.com/apps
+# Get values from https://api.slack.com/apps
 SLACK_TOKEN=
 SLACK_SIGNING_SECRET=
 SLACK_APP_TOKEN=
@@ -32,7 +32,6 @@ POSTGRES_DB_PORT=5432
 
 # External Microservices
 VIZAPI_LINK=https://vizapi.example.com
-COVERALLS_TOKEN=**********************
 
 # Cumulative Rating Settings
 CML_EASY_POINTS=0.5
