--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@discordjs/builders": "^0.6.0",
     "@discordjs/rest": "^0.1.0-canary.0",
     "@slack/bolt": "^3.7.0",
-    "axios": "0.21.1",
+    "axios": "^0.21.4",
     "dayjs": "^1.10.7",
     "discord-api-types": "^0.23.1",
     "discord.js": "^13.2.0",
@@ -33,7 +33,7 @@
     "pg": "^8.7.1",
     "rimraf": "^3.0.2",
     "sqlite": "^4.0.23",
-    "sqlite3": "^5.0.2",
+    "sqlite3": "^4.2.0",
     "typescript": "^4.4.3"
   },
   "devDependencies": {
