Remove Close Button from Discord

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -69,7 +69,9 @@
                     "requireLast": true
                 }
             }
-        ]
+        ],
+        "no-shadow": "off",
+        "@typescript-eslint/no-shadow": ["error"]
     },
     "settings": {
         "import/resolver": {
