--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     build:
       context: .
       dockerfile: ./deployment/Dockerfile
+    image: ${CONTAINER_NAME}
     volumes:
       - .:/usr/src/app
       - /usr/src/app/node_modules
