Add functionality to have multiple leetcode_bot instances in same compose

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,9 @@ SLACK_APP_TOKEN=
 # Can be sqlite3, mongo or postgres
 DB_PROVIDER=sqlite3
 
+# SQLite3 SETTINGS
+SQLITE3_FILENAME=leetbot.db
+
 # MONGODB SETTINGS
 MONGO_DB_URL=localhost
 MONGO_DB_NAME=leetbot_db
@@ -56,4 +59,3 @@ USERS_REFRESH_DELAY="*/30 * * * *"
 
 # Docker settings
 DATABASE_NETWORK=database_network
-CONTAINER_NAME=leetcode_bot
