Add PORT to constants

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,9 @@ SLACK_TOKEN=
 SLACK_SIGNING_SECRET=
 SLACK_APP_TOKEN=
 
+# REST
+PORT=8182
+
 # Database settings
 # Can be sqlite3, mongo or postgres
 DB_PROVIDER=sqlite3
